--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>Rock, Paper, Scissors</title>
 </head>
 <body>
+  <h1>You <span class="human-score">0</span> - <span class="computer-score">0</span> Computer</h1>
+  <button class="Rock">Rock</button>
+  <button class="Paper">Paper</button>
+  <button class="Scissors">Scissors</button>
+
+  <div class="results"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
